logs/validate.20260408-053548.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTRBStEph.rs:461:29
    |
461 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:721:50
    |
721 |     impl<T: std::fmt::Debug> std::fmt::Debug for BSTRBStEph<T> {
    |                                                  ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTRBStEph` in this scope
   --> src/Chap37/BSTRBStEph.rs:729:72
    |
729 |     impl<T: std::fmt::Debug + std::fmt::Display> std::fmt::Display for BSTRBStEph<T> {
    |                                                                        ^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 1682MB, peak z3 RSS: 221MB, min free: 24802MB
Sampled CPU Usage: rust_verify: 14s, z3 children: 2s
